<resources>
    <string name="app_name">Humdinger</string>
    <string name="menu_play">Play</string>
    <string name="menu_profiles">Profiles</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_profile_indicator">Current profile:</string>
    <string name="menu_current_profile">snes</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_edit">Edit</string>
    <string name="title_delete">Delete</string>
</resources>
