<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.humdinger.humdinger.MenuActivity"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10">
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/menu_play"
            android:layout_weight="1"
            android:layout_margin="15dp"
            android:onClick="toGameActivity" />
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/menu_profiles"
            android:layout_weight="1"
            android:layout_margin="15dp"
            android:onClick="toProfilesActivity"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="15dp"
            android:onClick="toSettingsActivity"
            android:text="@string/menu_settings" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/colorPrimary"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/menu_profile_indicator"
            android:textSize="25sp"
            android:layout_marginRight="5dp"
            android:textColor="@android:color/black"/>
        <TextView
            android:id="@+id/menu_textView_currentProfile"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/menu_current_profile"
            android:textSize="25sp"
            android:textColor="@android:color/black"/>

    </LinearLayout>

</LinearLayout>
